<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App -->
    <string name="app_name">Twist on Time</string>
    <!-- description -->
    <string name="app_desc">Timer Plugin by GaTech Junior Design</string>

    <string name="home_header">Timers</string>
    <string name="preset_header">Preset Timers</string>

    <string name="dummy_timer">Fake Timer</string>
    <string name="dummy_preset">Fake Preset</string>
    <string name="none">None</string>

    <string name="preset_text">Presets</string>

    <string name="back_text">Return</string>


    <string name="back_button_text">Back</string>

    <string-array name="custom_sounds">
        <item>Chime</item>
        <item>Alarm</item>
        <item>Radar</item>
        <item>Signal</item>
    </string-array>

    <!-- Custom Notifications-->
    <string-array name="custom_notification_settings">
        <item>At Time of Event</item>
        <item>1 Minute Before</item>
        <item>10 Minutes Before</item>
        <item>30 Minutes Before</item>
        <item>1 Hour Before</item>
        <item>Custom</item>
    </string-array>

    <!-- Custom Notifications Options-->
    <string-array name="custom_notifications_options_plural">
        <item>Seconds Before</item>
        <item>Minutes Before</item>
        <item>Hours Before</item>
    </string-array>
    <string-array name="custom_notifications_options_singluar">
        <item>Second Before</item>
        <item>Minute Before</item>
        <item>Hour Before</item>
    </string-array>

    <string name="change_sounds_header">Change Sounds</string>

    <string name="set_notifications_header">Set Notifications</string>
    <string name="customize_notification_popup_text">Set Custom Notification</string>
    <string name="set_notification_button_text">Set Notification</string>
    <string name="start_timer">Start Timer</string>

    <!-- Preset Cell Strings-->
    <string name="preset_name_text">Preset Name</string>
    <string name="preset_duration_text">Preset Duration</string>
    <string name="preset_set_button_text">Set</string>
    <string name="preset_delete_button_text">Delete</string>

</resources>
