<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="3dp"
    android:layout_marginRight="3dp"
    android:fadeScrollbars="false">


    <TextView
        android:id="@+id/preset_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:textSize="24sp"
        android:gravity="center"
        android:text="@string/preset_header" />

    <ScrollView
        android:id="@+id/preset_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/preset_header"
        android:layout_centerInParent="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="128dp"
        android:background="#1EFFFFFF">

        <LinearLayout
            android:id="@+id/preset_zone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fake_preset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textSize="32sp"
                android:text="@string/dummy_preset" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/preset_frame"
        android:layout_marginTop="-64dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"

        android:text="@string/back_text"/>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/preset_frame"
        android:layout_alignEnd="@id/preset_frame"
        android:layout_marginTop="-64dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:text="Add New"/>
    <!--This text will be replaced with icon later-->
</RelativeLayout>
